# kato

./: .coverage  .dockerignore  .env.example  .gitignore  ADOPTING_EXISTING_CLAUDE_SESSIONS.md  AGENTS.md  BYPASS_PROTECTIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SELF_REVIEW.md  SETUP.md  architecture.md  clean.sh  docker-compose.yaml  docker-compose.yml  kato  make.bat  make.ps1  package-lock.json  pyproject.toml
webserver/: README.md  pyproject.toml
webserver/kato_webserver/: __init__.py  app.py  git_diff_utils.py  session_registry.py
webserver/static/css/: app.css
webserver/static/js/: app.js
webserver/static/react/: right-pane.js  right-pane.js.map
webserver/templates/: index.html
webserver/tests/: test_all_settings_route.py  test_app.py  test_app_routes.py  test_detect_default_branch.py  test_diff_base_resolver.py  test_file_route_relative_path.py  test_git_diff_utils.py  test_git_diff_utils_changed.py  test_git_diff_utils_conflicts.py  test_hooks_wiring_routes.py  test_provider_settings_routes.py  test_session_registry.py  test_settings_routes.py
webserver/ui/: package-lock.json  package.json  vite.config.js  vitest.config.js  vitest.setup.js
webserver/ui/src/: App.jsx  App.test.jsx  ChangesTab.jsx  ChangesTab.test.jsx  FilesTab.jsx  FilesTab.test.jsx  FilesTabHelpers.js  FilesTabHelpers.test.js  api.js  api.test.js  diffModel.js  diffModel.test.jsx  main.jsx  main.test.jsx
webserver/ui/src/components/: AddRepositoryModal.jsx  AddRepositoryModal.test.jsx  AdoptSessionModal.jsx  AdoptSessionModal.test.jsx  AdoptTaskModal.jsx  AdoptTaskModal.test.jsx  Bubble.jsx  Bubble.test.jsx  ChatSearch.jsx  CommentWidgets.jsx  CommentWidgets.test.jsx  CommitDiffModal.jsx  CommitDiffModal.test.jsx  DiffExpansionHelpers.js  DiffExpansionHelpers.test.js  DiffFileComments.jsx  DiffFileComments.test.jsx  DiffFileWithComments.jsx  DiffFileWithComments.test.jsx  DiffPane.jsx  DiffPane.test.jsx  DiffPaneCss.test.js  EditorPane.jsx  EventLog.jsx  EventLog.test.jsx  ForgetTaskModal.jsx  ForgetTaskModal.test.jsx  GitProvidersSettingsPanel.jsx  Header.jsx  Header.test.jsx  Icon.jsx  Icon.test.jsx  Layout.jsx  Layout.test.jsx  LeftPaneResizer.jsx  MessageForm.jsx  MessageForm.test.jsx  NotificationSettings.jsx  NotificationSettings.test.jsx  NotificationsSettingsPanel.jsx  (+40 more)
webserver/ui/src/constants/: bubbleKind.js  claudeEvent.js  constants.test.js  entrySource.js  notificationKind.js  tabStatus.js
webserver/ui/src/contexts/: ChatComposerContext.jsx  ChatComposerContext.test.jsx
webserver/ui/src/hooks/: useNotificationRouting.hook.test.jsx  useNotificationRouting.js  useNotifications.hook.test.jsx  useNotifications.js  usePushApproval.hook.test.jsx  usePushApproval.js  useResizable.hook.test.jsx  useResizable.js  useSafetyState.hook.test.jsx  useSafetyState.js  useSessionStream.hook.test.jsx  useSessionStream.js  useSessionStream.test.js  useSessions.hook.test.jsx  useSessions.js  useStatusFeed.hook.test.jsx  useStatusFeed.js  useTaskAttention.hook.test.jsx  (+7 more)
(+838 files in other folders)
