[project]
name = "openhands-agent"
version = "0.1.0"
description = "Core-lib based developer agent for YouTrack, OpenHands, and Bitbucket."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "core-lib>=0.2.0",
  "email-core-lib",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pydantic>=2.11.0",
  "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["openhands_agent*", "hydra_plugins*"]

[tool.setuptools.package-data]
"openhands_agent.templates.email" = ["*.txt"]
"openhands_agent.data_layers.data.db.migrations" = ["script.py.mako"]
